Adjust width, prevent horizontal scrolling

--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -67,7 +67,7 @@
   margin: 0;
   padding: $padding--default $padding--default;
   display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(260px,1fr));
+    grid-template-columns: repeat(auto-fill);
     grid-auto-flow: row;
     grid-row-gap: 20px;
     grid-column-gap: 24px;
